--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=9999
 spring.datasource.url = jdbc:postgresql://localhost:5432/taggle
 spring.datasource.username = postgres
 spring.datasource.password = 123
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=taggleapi
