yes is a beautiful day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=taggleapi
 
 jwt.public.key=classpath:public.key
-jwt.private.key=classpath:private.key
+jwt.private.key=classpath:private_key_nocrypt.key
