--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=taggleapi
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+# springdoc.api-docs.path="/api-docs"
+
 
 jwt.public.key=classpath:public.key
 jwt.private.key=classpath:private_key_nocrypt.key
